# Auto-Obsidian-md

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  RELEASE.md  config.docker.toml  config.example.toml  docker-compose.yml  feeds.example.txt  links.example.txt  pyproject.toml  run.ps1  使用说明.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  windows-release.yml
automation/: register-douyin-every-2-days.ps1  run-ingest-batch.ps1
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: api.ts  command-messages.ts  edition.ts  main.ts  state.ts  styles.css  types.ts  ui.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/release-notes/: v0.04-final-report.md  (+1 more)
docs/user/: 常见问题.md  (+4 more)
packaging/: backend_main.py  build-desktop-edition.ps1  build-sidecar.ps1  clean-build.ps1  local-stability-check.ps1  sign-windows.ps1  verify-release.ps1
sample-inputs/: bilibili-export.srt  douyin-routing-test.txt  real-vault-clean-test.txt  routing-kaoyan-test.txt  whisper-chinese-speech-test.txt
tests/: test_account_browser.py  test_account_integration.py  test_account_providers.py  test_account_service.py  test_accounts_store.py  test_adapters.py  test_backup.py  test_cli_accounts.py  test_cli_pipeline.py  test_cli_status.py  test_collectors.py  test_config_templates.py  test_dependencies.py  test_desktop_layout.py  test_diagnostics.py  test_full_completion.py  test_markdown.py  test_obsidian_writer.py  test_phase2_collectors.py  test_pipeline.py  test_platforms.py  test_queue_store.py
(+46 files in other folders)
